[package]
name = "learn-rust"
version = "0.1.0"
authors = ["Christos Perivolaropoulos <c.perivol@ed.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.11.13"
bytes = "1.1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.1", features = ["codec"] }
tempfile = "3.3.0"
